# job_search_agent

./: .gitignore  README.md  config.yaml.example  pyproject.toml
.claude/commands/: megaplan.md  sprint.md
.codex/skills/megaplan/: SKILL.md
.codex/skills/sprint/: SKILL.md
docs/sprints/: README.md  SPRINT-001.md  SPRINT-002.md  SPRINT-003.md  SPRINT-004.md  ledger.tsv
docs/sprints/drafts/: SPRINT-001-CLAUDE-DRAFT-CODEX-CRITIQUE.md  SPRINT-001-CLAUDE-DRAFT.md  SPRINT-001-CODEX-DRAFT.md  SPRINT-001-INTENT.md  SPRINT-001-MERGE-NOTES.md  SPRINT-002-CLAUDE-DRAFT-CODEX-CRITIQUE.md  SPRINT-002-CLAUDE-DRAFT.md  SPRINT-002-CODEX-DRAFT.md  SPRINT-002-INTENT.md  SPRINT-002-MERGE-NOTES.md  SPRINT-003-CLAUDE-DRAFT-CODEX-CRITIQUE.md  SPRINT-003-CLAUDE-DRAFT.md  SPRINT-003-CODEX-DRAFT.md  SPRINT-003-INTENT.md  SPRINT-003-MERGE-NOTES.md  SPRINT-004-CLAUDE-DRAFT-CODEX-CRITIQUE.md  SPRINT-004-CLAUDE-DRAFT.md  SPRINT-004-CODEX-DRAFT.md  SPRINT-004-INTENT.md  SPRINT-004-MERGE-NOTES.md
job_search_agent/: __main__.py  config.py  emailer.py  models.py  runner.py  storage.py
job_search_agent/scrapers/: builtin.py  goinhouse.py  himalayas.py  jobicy.py  remoteok.py  remotive.py  themuse.py  underdog.py  wellfound.py  wttj.py
